# modules/user/api.go
@@ -171,6 +171,7 @@ func (u *User) Route(r *wkhttp.WKHttp) {
 		v.POST("/user/login", u.login)                       // 用户登录
 		v.POST("/user/usernamelogin", u.usernameLogin)       // 用户名登录
 		v.POST("/user/usernameregister", u.usernameRegister) // 用户名注册
+		v.POST("/user/business/login", u.businessLogin)      // 业务系统用户登录
 
 		v.POST("/user/pwdforget_web3", u.resetPwdWithWeb3PublicKey) // 通过web3公钥重置密码
 		v.GET("/user/web3verifytext", u.getVerifyText)              // 获取验证字符串
